[gd_scene load_steps=7 format=3 uid="uid://dmmyoxswkt77d"]

[ext_resource type="PackedScene" uid="uid://b4xrfoj2eamff" path="res://scenes/character.tscn" id="1_lkudo"]
[ext_resource type="Script" uid="uid://budd3c8774yjg" path="res://components/swipe_movement.gd" id="2_limlt"]
[ext_resource type="Resource" uid="uid://di86qo6u0q0tx" path="res://resources/characters/player_stats.tres" id="3_jufy2"]
[ext_resource type="PackedScene" uid="uid://bud4avbtmrdan" path="res://scenes/hud.tscn" id="4_2h6y6"]
[ext_resource type="Script" uid="uid://chs34klegnxft" path="res://components/tap_gesture_handler.gd" id="4_3vtw1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jxbp"]
size = Vector2(8, 8)

[node name="Player" instance=ExtResource("1_lkudo")]
stats = ExtResource("3_jufy2")

[node name="SwipeMovement" type="Node" parent="." index="3" node_paths=PackedStringArray("cooldown")]
script = ExtResource("2_limlt")
cooldown = NodePath("../MovementCooldown")

[node name="MovementCooldown" type="Timer" parent="." index="4"]
wait_time = 0.25
one_shot = true
autostart = true

[node name="TapGestureHandler" type="Node" parent="." index="5"]
script = ExtResource("4_3vtw1")

[node name="RenderNotifier" type="Area2D" parent="." index="6"]
position = Vector2(0, -5)
collision_layer = 1073741824
collision_mask = 2147483648
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RenderNotifier" index="0"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_3jxbp")

[node name="HUD" parent="." index="9" instance=ExtResource("4_2h6y6")]

[connection signal="armorChanged" from="." to="HUD" method="update_dp"]
[connection signal="healthChanged" from="." to="HUD" method="update_hp"]
[connection signal="manaChanged" from="." to="HUD" method="update_mp"]
[connection signal="staminaChanged" from="." to="HUD" method="update_sp"]
[connection signal="inventoryChanged" from="InventorySystem" to="HUD" method="update_inventory"]
[connection signal="onSwipe" from="SwipeMovement" to="." method="_onAction"]
[connection signal="doubleTap" from="TapGestureHandler" to="." method="onPickUpDrop"]
[connection signal="longTap" from="TapGestureHandler" to="HUD" method="set_inv_visible"]
[connection signal="onUIControls" from="HUD" to="." method="onInventoryOpen"]
[connection signal="selectedItem" from="HUD" to="." method="onItemSelected"]
